// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createBackendBucketEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendBuckets/example-backend-bucket",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "bucketName": "log-example-bucket",
        "creationTimestamp": "2021-01-29T08:55:45.400-08:00",
        "description": "",
        "enableCdn": false,
        "id": "6230681112154833150",
        "kind": "compute#backendBucket",
        "name": "example-backend-bucket",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendBuckets/example-backend-bucket",
      },
    },
  ],
  "_type": "google_compute_backend_bucket",
  "bucketName": "log-example-bucket",
  "category": [
    "network",
  ],
  "createdOn": 1611939345400,
  "description": "",
  "displayName": "example-backend-bucket",
  "enableCdn": false,
  "encrypted": true,
  "function": [
    "load-balancing",
  ],
  "id": "6230681112154833150",
  "name": "example-backend-bucket",
  "public": true,
}
`;

exports[`#createBackendServiceEntity should convert to entity 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-backend-service",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "affinityCookieTtlSec": 0,
        "backends": [
          {
            "balancingMode": "UTILIZATION",
            "capacityScaler": 1,
            "group": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instanceGroups/instance-group-1",
            "maxUtilization": 0.8,
          },
        ],
        "connectionDraining": {
          "drainingTimeoutSec": 300,
        },
        "creationTimestamp": "2021-01-25T13:09:28.422-08:00",
        "description": "",
        "enableCDN": false,
        "fingerprint": "OnffiLYpLO4=",
        "healthChecks": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/healthChecks/health-check",
        ],
        "id": "3052966098403233127",
        "kind": "compute#backendService",
        "loadBalancingScheme": "EXTERNAL",
        "logConfig": {
          "enable": true,
          "sampleRate": 1,
        },
        "name": "example-backend-service",
        "port": 80,
        "portName": "https",
        "protocol": "HTTPS",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-backend-service",
        "sessionAffinity": "NONE",
        "timeoutSec": 30,
      },
    },
  ],
  "_type": "google_compute_backend_service",
  "category": [
    "network",
  ],
  "createdOn": 1611608968422,
  "description": "",
  "displayName": "example-backend-service",
  "enableCDN": false,
  "function": [
    "load-balancing",
  ],
  "id": "3052966098403233127",
  "name": "example-backend-service",
  "port": 80,
  "protocol": "HTTPS",
  "regional": false,
  "timeoutSec": 30,
}
`;

exports[`#createComputeAddressEntity should convert to entity 1`] = `
{
  "_class": [
    "IpAddress",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "address": "35.224.103.156",
        "addressType": "EXTERNAL",
        "creationTimestamp": "2021-05-21T05:34:18.344-07:00",
        "description": "",
        "id": "4228086364807763493",
        "kind": "compute#address",
        "name": "my-test-address",
        "networkTier": "PREMIUM",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
        "status": "RESERVED",
      },
    },
  ],
  "_type": "google_compute_address",
  "active": undefined,
  "addressType": "EXTERNAL",
  "createdOn": 1621600458344,
  "description": "",
  "displayName": "my-test-address",
  "id": "4228086364807763493",
  "ipAddress": "35.224.103.156",
  "ipVersion": undefined,
  "kind": "compute#address",
  "name": "my-test-address",
  "network": undefined,
  "networkTier": "PREMIUM",
  "publicIpAddress": "35.224.103.156",
  "purpose": undefined,
  "status": "RESERVED",
  "subnetwork": undefined,
  "users": undefined,
  "webLink": "https://console.cloud.google.com/networking/addresses/list?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeAddressEntity should convert to entity 2`] = `
{
  "_class": [
    "IpAddress",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/addresses/global-address-example",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "address": "100.100.100.105",
        "addressType": "INTERNAL",
        "creationTimestamp": "2021-07-07T04:43:33.648-07:00",
        "description": "",
        "id": "5882576143110385034",
        "kind": "compute#address",
        "name": "global-address-example",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/global-address-example-network",
        "networkTier": "PREMIUM",
        "purpose": "PRIVATE_SERVICE_CONNECT",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/addresses/global-address-example",
        "status": "RESERVED",
      },
    },
  ],
  "_type": "google_compute_global_address",
  "active": undefined,
  "addressType": "INTERNAL",
  "createdOn": 1625658213648,
  "description": "",
  "displayName": "global-address-example",
  "id": "5882576143110385034",
  "ipAddress": "100.100.100.105",
  "ipVersion": undefined,
  "kind": "compute#address",
  "name": "global-address-example",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/global-address-example-network",
  "networkTier": "PREMIUM",
  "publicIpAddress": undefined,
  "purpose": "PRIVATE_SERVICE_CONNECT",
  "status": "RESERVED",
  "subnetwork": undefined,
  "users": undefined,
  "webLink": "https://console.cloud.google.com/networking/addresses/list?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeAddressEntity should have list of resources using the address if resources are using it 1`] = `
{
  "_class": [
    "IpAddress",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "address": "35.224.103.156",
        "addressType": "EXTERNAL",
        "creationTimestamp": "2021-05-21T05:34:18.344-07:00",
        "description": "",
        "id": "4228086364807763493",
        "kind": "compute#address",
        "name": "my-test-address",
        "networkTier": "PREMIUM",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
        "status": "RESERVED",
        "users": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/instance-custom-image",
        ],
      },
    },
  ],
  "_type": "google_compute_address",
  "active": undefined,
  "addressType": "EXTERNAL",
  "createdOn": 1621600458344,
  "description": "",
  "displayName": "my-test-address",
  "id": "4228086364807763493",
  "ipAddress": "35.224.103.156",
  "ipVersion": undefined,
  "kind": "compute#address",
  "name": "my-test-address",
  "network": undefined,
  "networkTier": "PREMIUM",
  "publicIpAddress": "35.224.103.156",
  "purpose": undefined,
  "status": "RESERVED",
  "subnetwork": undefined,
  "users": [
    "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/instance-custom-image",
  ],
  "webLink": "https://console.cloud.google.com/networking/addresses/list?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeAddressEntity should have list of resources using the address if resources are using it 2`] = `
{
  "_class": [
    "IpAddress",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "address": "35.224.103.156",
        "addressType": "EXTERNAL",
        "creationTimestamp": "2021-05-21T05:34:18.344-07:00",
        "description": "",
        "id": "4228086364807763493",
        "kind": "compute#address",
        "name": "my-test-address",
        "networkTier": "PREMIUM",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/addresses/my-test-address",
        "status": "RESERVED",
        "users": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/instance-custom-image",
        ],
      },
    },
  ],
  "_type": "google_compute_address",
  "active": undefined,
  "addressType": "EXTERNAL",
  "createdOn": 1621600458344,
  "description": "",
  "displayName": "my-test-address",
  "id": "4228086364807763493",
  "ipAddress": "35.224.103.156",
  "ipVersion": undefined,
  "kind": "compute#address",
  "name": "my-test-address",
  "network": undefined,
  "networkTier": "PREMIUM",
  "publicIpAddress": "35.224.103.156",
  "purpose": undefined,
  "status": "RESERVED",
  "subnetwork": undefined,
  "users": [
    "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/instance-custom-image",
  ],
  "webLink": "https://console.cloud.google.com/networking/addresses/list?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeDiskEntity should convert to entity 1`] = `
{
  "_class": [
    "DataStore",
    "Disk",
  ],
  "_key": "disk:123456789",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": [
          "1000205",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "READY",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/diskTypes/pd-standard",
        "users": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": true,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "isCustomerSuppliedKeysEncrypted": false,
  "kind": "compute#disk",
  "kmsKeyName": undefined,
  "kmsKeyServiceAccount": undefined,
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": [
    "1000205",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "regional": false,
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "sourceSnapshot": undefined,
  "sourceSnapshotId": undefined,
  "status": "READY",
  "type": "pd-standard",
  "webLink": "https://console.cloud.google.com/compute/disksDetail/zones/us-central1-a/disks/testvm?project=j1-gc-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeDiskEntity should set active to false when status is not READY 1`] = `
{
  "_class": [
    "DataStore",
    "Disk",
  ],
  "_key": "disk:123456789",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2020-08-12T08:20:05.930-07:00",
        "licenseCodes": [
          "1000205",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "testvm",
        "physicalBlockSizeBytes": "4096",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/testvm",
        "sizeGb": "10",
        "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
        "sourceImageId": "6709658075886210235",
        "status": "FAILED",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/diskTypes/pd-standard",
        "users": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
        ],
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": false,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "testvm",
  "encrypted": true,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "isCustomerSuppliedKeysEncrypted": false,
  "kind": "compute#disk",
  "kmsKeyName": undefined,
  "kmsKeyServiceAccount": undefined,
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1597245605930,
  "licenseCodes": [
    "1000205",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "testvm",
  "physicalBlockSizeBytes": "4096",
  "regional": false,
  "sizeGB": "10",
  "sourceImage": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200805",
  "sourceImageId": "6709658075886210235",
  "sourceSnapshot": undefined,
  "sourceSnapshotId": undefined,
  "status": "FAILED",
  "type": "pd-standard",
  "webLink": "https://console.cloud.google.com/compute/disksDetail/zones/us-central1-a/disks/testvm?project=j1-gc-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeFirewallEntity should convert to entity 1`] = `
{
  "_class": [
    "Firewall",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/firewalls/public-compute-app-fw-allow-https",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "443",
            ],
          },
        ],
        "creationTimestamp": "2020-09-23T07:47:24.809-07:00",
        "description": "",
        "direction": "INGRESS",
        "disabled": false,
        "id": "1234567890",
        "kind": "compute#firewall",
        "logConfig": {
          "enable": false,
        },
        "name": "public-compute-app-fw-allow-https",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/public-compute-app-vpc",
        "priority": 1000,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/firewalls/public-compute-app-fw-allow-https",
        "sourceRanges": [
          "0.0.0.0/0",
        ],
        "targetTags": [
          "https",
        ],
      },
    },
  ],
  "_type": "google_compute_firewall",
  "allowed": "[{"IPProtocol":"tcp","ports":["443"]}]",
  "category": [
    "network",
  ],
  "createdOn": 1600872444809,
  "denied": undefined,
  "description": "",
  "destinationRanges": undefined,
  "disabled": false,
  "displayName": "public-compute-app-fw-allow-https",
  "egress": false,
  "id": "1234567890",
  "ingress": true,
  "internal": true,
  "logConfigEnabled": false,
  "logConfigMetadata": undefined,
  "name": "public-compute-app-fw-allow-https",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/public-compute-app-vpc",
  "priority": 1000,
  "public": false,
  "sourceRanges": [
    "0.0.0.0/0",
  ],
  "sourceServiceAccounts": undefined,
  "sourceTags": undefined,
  "targetServiceAccounts": undefined,
  "targetTags": [
    "https",
  ],
}
`;

exports[`#createComputeImageEntity should convert to entity 1`] = `
{
  "_class": [
    "Image",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "archiveSizeBytes": "1775261760",
        "creationTimestamp": "2021-05-03T13:04:03.663-07:00",
        "diskSizeGb": "10",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
          {
            "type": "SEV_CAPABLE",
          },
          {
            "type": "UEFI_COMPATIBLE",
          },
        ],
        "id": "6989580994168613341",
        "imageEncryptionKey": {
          "kmsKeyName": "projects/j1-gc-integration-dev-v2/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
        },
        "kind": "compute#image",
        "labelFingerprint": "42WmSpB8rSM=",
        "licenseCodes": [
          "5926592092274602096",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
        ],
        "name": "my-custom-image",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
        "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
        "sourceDiskId": "7645090348976312809",
        "sourceType": "RAW",
        "status": "READY",
        "storageLocations": [
          "us-central1",
        ],
      },
    },
  ],
  "_type": "google_compute_image",
  "active": undefined,
  "archivedSizeBytes": "1775261760",
  "createdOn": 1620072243663,
  "deprecated": false,
  "deprecationState": undefined,
  "description": undefined,
  "diskSizeGb": "10",
  "displayName": "my-custom-image",
  "family": undefined,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
    "SEV_CAPABLE",
    "UEFI_COMPATIBLE",
  ],
  "id": "6989580994168613341",
  "kind": "compute#image",
  "labelFingerprint": "42WmSpB8rSM=",
  "licenseCodes": [
    "5926592092274602096",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
  ],
  "name": "my-custom-image",
  "public": false,
  "rawDisk.containerType": undefined,
  "rawDisk.sha1Checksum": undefined,
  "rawDisk.source": undefined,
  "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
  "sourceDiskId": "7645090348976312809",
  "sourceImage": undefined,
  "sourceImageId": undefined,
  "sourceSnapshot": undefined,
  "sourceSnapshotId": undefined,
  "sourceType": "RAW",
  "status": "READY",
  "storageLocations": [
    "us-central1",
  ],
}
`;

exports[`#createComputeImageEntity should set deprecated to false if the image is not deprecated 1`] = `
{
  "_class": [
    "Image",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "archiveSizeBytes": "1775261760",
        "creationTimestamp": "2021-05-03T13:04:03.663-07:00",
        "diskSizeGb": "10",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
          {
            "type": "SEV_CAPABLE",
          },
          {
            "type": "UEFI_COMPATIBLE",
          },
        ],
        "id": "6989580994168613341",
        "imageEncryptionKey": {
          "kmsKeyName": "projects/j1-gc-integration-dev-v2/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
        },
        "kind": "compute#image",
        "labelFingerprint": "42WmSpB8rSM=",
        "licenseCodes": [
          "5926592092274602096",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
        ],
        "name": "my-custom-image",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
        "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
        "sourceDiskId": "7645090348976312809",
        "sourceType": "RAW",
        "status": "READY",
        "storageLocations": [
          "us-central1",
        ],
      },
    },
  ],
  "_type": "google_compute_image",
  "active": undefined,
  "archivedSizeBytes": "1775261760",
  "createdOn": 1620072243663,
  "deprecated": false,
  "deprecationState": undefined,
  "description": undefined,
  "diskSizeGb": "10",
  "displayName": "my-custom-image",
  "family": undefined,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
    "SEV_CAPABLE",
    "UEFI_COMPATIBLE",
  ],
  "id": "6989580994168613341",
  "kind": "compute#image",
  "labelFingerprint": "42WmSpB8rSM=",
  "licenseCodes": [
    "5926592092274602096",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
  ],
  "name": "my-custom-image",
  "public": false,
  "rawDisk.containerType": undefined,
  "rawDisk.sha1Checksum": undefined,
  "rawDisk.source": undefined,
  "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
  "sourceDiskId": "7645090348976312809",
  "sourceImage": undefined,
  "sourceImageId": undefined,
  "sourceSnapshot": undefined,
  "sourceSnapshotId": undefined,
  "sourceType": "RAW",
  "status": "READY",
  "storageLocations": [
    "us-central1",
  ],
}
`;

exports[`#createComputeImageEntity should set deprecated to true if the image is deprecated 1`] = `
{
  "_class": [
    "Image",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "archiveSizeBytes": "1775261760",
        "creationTimestamp": "2021-05-03T13:04:03.663-07:00",
        "deprecated": {
          "replacement": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/example-disk-image",
          "state": "DEPRECATED",
        },
        "diskSizeGb": "10",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
          {
            "type": "SEV_CAPABLE",
          },
          {
            "type": "UEFI_COMPATIBLE",
          },
        ],
        "id": "6989580994168613341",
        "imageEncryptionKey": {
          "kmsKeyName": "projects/j1-gc-integration-dev-v2/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
        },
        "kind": "compute#image",
        "labelFingerprint": "42WmSpB8rSM=",
        "licenseCodes": [
          "5926592092274602096",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
        ],
        "name": "my-custom-image",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/images/my-custom-image",
        "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
        "sourceDiskId": "7645090348976312809",
        "sourceType": "RAW",
        "status": "READY",
        "storageLocations": [
          "us-central1",
        ],
      },
    },
  ],
  "_type": "google_compute_image",
  "active": undefined,
  "archivedSizeBytes": "1775261760",
  "createdOn": 1620072243663,
  "deprecated": true,
  "deprecationState": "DEPRECATED",
  "description": undefined,
  "diskSizeGb": "10",
  "displayName": "my-custom-image",
  "family": undefined,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
    "SEV_CAPABLE",
    "UEFI_COMPATIBLE",
  ],
  "id": "6989580994168613341",
  "kind": "compute#image",
  "labelFingerprint": "42WmSpB8rSM=",
  "licenseCodes": [
    "5926592092274602096",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/licenses/ubuntu-1804-lts",
  ],
  "name": "my-custom-image",
  "public": false,
  "rawDisk.containerType": undefined,
  "rawDisk.sha1Checksum": undefined,
  "rawDisk.source": undefined,
  "sourceDisk": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/disks/load-balancer-instance",
  "sourceDiskId": "7645090348976312809",
  "sourceImage": undefined,
  "sourceImageId": undefined,
  "sourceSnapshot": undefined,
  "sourceSnapshotId": undefined,
  "sourceType": "RAW",
  "status": "READY",
  "storageLocations": [
    "us-central1",
  ],
}
`;

exports[`#createComputeInstanceEntity should convert to entity 1`] = `
{
  "_class": [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "tags": [
          {
            "testvmtag1": true,
          },
          {
            "testvmtag2": true,
          },
        ],
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "blockProjectSSHKeys": false,
  "canIpForward": false,
  "connectedNetworksCount": 1,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "enableConfidentialCompute": undefined,
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "integrityMonitoringEnabled": false,
  "isOSLoginEnabled": false,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "osArchitecture": "x86_64",
  "osHostname": "sonarqube",
  "osKernelVersion": "#1 SMP Debian 5.10.149-2 (2022-10-21)",
  "osLongName": "Debian GNU/Linux 11 (bullseye)",
  "osShortName": "debian",
  "osVersion": "11",
  "osconfigAgentVersion": "20221013.01-g1",
  "privateIpAddress": [
    "10.128.0.2",
  ],
  "publicIpAddress": [],
  "secureBootEnabled": false,
  "serviceAccountEmails": [
    "j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  ],
  "startRestricted": false,
  "status": "RUNNING",
  "updateTime": 1686004002714,
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "vtpmEnabled": false,
  "webLink": "https://console.cloud.google.com/compute/instancesDetail/zones/us-central1-a/instances/testvm?project=j1-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set active to false when status is not RUNNING 1`] = `
{
  "_class": [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "tags": [
          {
            "testvmtag1": true,
          },
          {
            "testvmtag2": true,
          },
        ],
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": false,
  "blockProjectSSHKeys": false,
  "canIpForward": false,
  "connectedNetworksCount": 1,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "enableConfidentialCompute": undefined,
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "integrityMonitoringEnabled": false,
  "isOSLoginEnabled": false,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "osArchitecture": "x86_64",
  "osHostname": "sonarqube",
  "osKernelVersion": "#1 SMP Debian 5.10.149-2 (2022-10-21)",
  "osLongName": "Debian GNU/Linux 11 (bullseye)",
  "osShortName": "debian",
  "osVersion": "11",
  "osconfigAgentVersion": "20221013.01-g1",
  "privateIpAddress": [
    "10.128.0.2",
  ],
  "publicIpAddress": [],
  "secureBootEnabled": false,
  "serviceAccountEmails": [
    "j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  ],
  "startRestricted": false,
  "status": "SUSPENDED",
  "updateTime": 1686004002714,
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "vtpmEnabled": false,
  "webLink": "https://console.cloud.google.com/compute/instancesDetail/zones/us-central1-a/instances/testvm?project=j1-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set connectedNetworksCount to 2 when there are 2 network interfaces 1`] = `
{
  "_class": [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "tags": [
          {
            "testvmtag1": true,
          },
          {
            "testvmtag2": true,
          },
        ],
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "blockProjectSSHKeys": false,
  "canIpForward": false,
  "connectedNetworksCount": 2,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "enableConfidentialCompute": undefined,
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "integrityMonitoringEnabled": false,
  "isOSLoginEnabled": false,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "osArchitecture": "x86_64",
  "osHostname": "sonarqube",
  "osKernelVersion": "#1 SMP Debian 5.10.149-2 (2022-10-21)",
  "osLongName": "Debian GNU/Linux 11 (bullseye)",
  "osShortName": "debian",
  "osVersion": "11",
  "osconfigAgentVersion": "20221013.01-g1",
  "privateIpAddress": [
    "10.128.0.2",
    "10.128.0.22",
  ],
  "publicIpAddress": [],
  "secureBootEnabled": false,
  "serviceAccountEmails": [
    "j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  ],
  "startRestricted": false,
  "status": "RUNNING",
  "updateTime": 1686004002714,
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "vtpmEnabled": false,
  "webLink": "https://console.cloud.google.com/compute/instancesDetail/zones/us-central1-a/instances/testvm?project=j1-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceEntity should set isOSLoginEnabled to true when enabled-oslogin metadata value is "TRUE" 1`] = `
{
  "_class": [
    "Host",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "tags": [
          {
            "testvmtag1": true,
          },
          {
            "testvmtag2": true,
          },
        ],
      },
    },
  ],
  "_type": "google_compute_instance",
  "active": true,
  "blockProjectSSHKeys": false,
  "canIpForward": false,
  "connectedNetworksCount": 1,
  "cpuPlatform": "Intel Haswell",
  "createdOn": 1597245605921,
  "deletionProtection": false,
  "displayName": "testvm",
  "enableConfidentialCompute": undefined,
  "fingerprint": "4gmEF7tlfn8=",
  "hostname": null,
  "id": "2248191918776890954",
  "integrityMonitoringEnabled": false,
  "isOSLoginEnabled": true,
  "isSerialPortEnabled": undefined,
  "isShieldedVM": undefined,
  "kind": "compute#instance",
  "labelFingerprint": "42WmSpB8rSM=",
  "machineType": "n1-standard-1",
  "name": "testvm",
  "osArchitecture": "x86_64",
  "osHostname": "sonarqube",
  "osKernelVersion": "#1 SMP Debian 5.10.149-2 (2022-10-21)",
  "osLongName": "Debian GNU/Linux 11 (bullseye)",
  "osShortName": "debian",
  "osVersion": "11",
  "osconfigAgentVersion": "20221013.01-g1",
  "privateIpAddress": [
    "10.128.0.2",
  ],
  "publicIpAddress": [],
  "secureBootEnabled": false,
  "serviceAccountEmails": [
    "j1-gc-integration-dev-v2-sa-tf@j1-gc-integration-dev-v2.iam.gserviceaccount.com",
  ],
  "startRestricted": false,
  "status": "RUNNING",
  "updateTime": 1686004002714,
  "usesDefaultServiceAccount": false,
  "usesFullAccessDefaultServiceAccount": false,
  "vtpmEnabled": false,
  "webLink": "https://console.cloud.google.com/compute/instancesDetail/zones/us-central1-a/instances/testvm?project=j1-integration-dev-v2",
  "zone": "us-central1-a",
}
`;

exports[`#createComputeInstanceUsesComputeDiskRelationship should convert to relationship 1`] = `
{
  "_class": "USES",
  "_fromEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm",
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instances/testvm|uses|disk:123456789",
  "_toEntityKey": "disk:123456789",
  "_type": "google_compute_instance_uses_disk",
  "autoDelete": true,
  "deviceName": "persisten-disk-0",
  "displayName": "USES",
  "interface": "SCSI",
  "mode": "READ_WRITE",
}
`;

exports[`#createComputeNetworkEntity should convert to entity 1`] = `
{
  "CIDR": null,
  "IPv4Range": undefined,
  "_class": [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/public-compute-app-vpc",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "autoCreateSubnetworks": false,
        "creationTimestamp": "2020-09-23T07:47:13.320-07:00",
        "id": "4319333979087364382",
        "kind": "compute#network",
        "name": "public-compute-app-vpc",
        "routingConfig": {
          "routingMode": "GLOBAL",
        },
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/public-compute-app-vpc",
        "subnetworks": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
        ],
      },
    },
  ],
  "_type": "google_compute_network",
  "autoCreateSubnetworks": false,
  "createdOn": 1600872433320,
  "description": undefined,
  "displayName": "public-compute-app-vpc",
  "gatewayIPv4": undefined,
  "id": "4319333979087364382",
  "internal": true,
  "name": "public-compute-app-vpc",
  "public": false,
  "routingMode": "GLOBAL",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/subnetworks/public-compute-app-public-subnet-1",
  ],
  "webLink": "https://console.cloud.google.com/networking/networks/details/public-compute-app-vpc?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeProjectEntity should convert to entity 1`] = `
{
  "_class": [
    "Project",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "commonInstanceMetadata": {
          "fingerprint": "3rFva159u8A=",
          "kind": "compute#metadata",
        },
        "creationTimestamp": "2021-01-04T09:00:19.752-08:00",
        "defaultNetworkTier": "PREMIUM",
        "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
        "id": "8075573275056338764",
        "kind": "compute#project",
        "name": "j1-gc-integration-dev-v2",
        "quotas": [
          {
            "limit": 1000,
            "metric": "SNAPSHOTS",
            "usage": 0,
          },
          {
            "limit": 5,
            "metric": "NETWORKS",
            "usage": 3,
          },
          {
            "limit": 100,
            "metric": "FIREWALLS",
            "usage": 7,
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2",
        "xpnProjectStatus": "UNSPECIFIED_XPN_PROJECT_STATUS",
      },
    },
  ],
  "_type": "google_compute_project",
  "createdOn": 1609779619752,
  "defaultNetworkTier": "PREMIUM",
  "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
  "displayName": "j1-gc-integration-dev-v2",
  "id": "8075573275056338764",
  "isOSLoginEnabled": false,
  "kind": "compute#project",
  "name": "j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeProjectEntity should set isOSLoginEnabled to true when enabled-oslogin metadata value is "TRUE" 1`] = `
{
  "_class": [
    "Project",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "commonInstanceMetadata": {
          "items": [
            {
              "key": "enable-oslogin",
              "value": "TRUE",
            },
          ],
          "kind": "compute#metadata",
        },
        "creationTimestamp": "2021-01-04T09:00:19.752-08:00",
        "defaultNetworkTier": "PREMIUM",
        "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
        "id": "8075573275056338764",
        "kind": "compute#project",
        "name": "j1-gc-integration-dev-v2",
        "quotas": [
          {
            "limit": 1000,
            "metric": "SNAPSHOTS",
            "usage": 0,
          },
          {
            "limit": 5,
            "metric": "NETWORKS",
            "usage": 3,
          },
          {
            "limit": 100,
            "metric": "FIREWALLS",
            "usage": 7,
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2",
        "xpnProjectStatus": "UNSPECIFIED_XPN_PROJECT_STATUS",
      },
    },
  ],
  "_type": "google_compute_project",
  "createdOn": 1609779619752,
  "defaultNetworkTier": "PREMIUM",
  "defaultServiceAccount": "165882964161-compute@developer.gserviceaccount.com",
  "displayName": "j1-gc-integration-dev-v2",
  "id": "8075573275056338764",
  "isOSLoginEnabled": true,
  "kind": "compute#project",
  "name": "j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeRegionDiskEntity should convert to entity 1`] = `
{
  "_class": [
    "DataStore",
    "Disk",
  ],
  "_key": "region_disk:123456789",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2020-08-12T08:20:05.930-07:00",
        "guestOsFeatures": [
          {
            "type": "VIRTIO_SCSI_MULTIQUEUE",
          },
        ],
        "id": "123456789",
        "kind": "compute#disk",
        "labelFingerprint": "42WmSpB8rSM=",
        "lastAttachTimestamp": "2021-07-09T08:20:05.930-07:00",
        "licenseCodes": [
          "1000205",
        ],
        "licenses": [
          "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
        ],
        "name": "my-region-disk",
        "physicalBlockSizeBytes": "4096",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/disks/my-region-disk",
        "sizeGb": "10",
        "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/my-snapshot",
        "sourceSnapshotId": "582017966438274022",
        "status": "READY",
        "tags": undefined,
        "type": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/diskTypes/pd-ssd",
      },
    },
  ],
  "_type": "google_compute_disk",
  "active": true,
  "classification": null,
  "createdOn": 1597245605930,
  "description": undefined,
  "displayName": "my-region-disk",
  "encrypted": true,
  "guestOsFeatures": [
    "VIRTIO_SCSI_MULTIQUEUE",
  ],
  "id": "123456789",
  "isCustomerSuppliedKeysEncrypted": false,
  "kind": "compute#disk",
  "kmsKeyName": undefined,
  "kmsKeyServiceAccount": undefined,
  "labelFingerprint": "42WmSpB8rSM=",
  "lastAttachTimestamp": 1625844005930,
  "licenseCodes": [
    "1000205",
  ],
  "licenses": [
    "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/licenses/debian-9-stretch",
  ],
  "name": "my-region-disk",
  "physicalBlockSizeBytes": "4096",
  "region": "us-central1",
  "regional": true,
  "sizeGB": "10",
  "sourceSnapshot": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/snapshots/my-snapshot",
  "sourceSnapshotId": "582017966438274022",
  "status": "READY",
  "type": "pd-ssd",
  "webLink": "https://console.cloud.google.com/compute/disksDetail/regions/us-central1/disks/my-region-disk?project=j1-gc-integration-dev-v3",
}
`;

exports[`#createComputeSubnetEntity should convert to entity 1`] = `
{
  "CIDR": "10.164.0.0/20",
  "_class": [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4/subnetworks/default",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2020-08-07T10:20:16.033-07:00",
        "fingerprint": "whfZBEBCda4=",
        "gatewayAddress": "10.164.0.1",
        "id": "1234567890",
        "ipCidrRange": "10.164.0.0/20",
        "kind": "compute#subnetwork",
        "name": "default",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/default",
        "privateIpGoogleAccess": false,
        "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
        "purpose": "PRIVATE",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4/subnetworks/default",
      },
    },
  ],
  "_type": "google_compute_subnetwork",
  "createdOn": 1596820816033,
  "description": undefined,
  "displayName": "default",
  "flowLogsEnabled": false,
  "gatewayAddress": "10.164.0.1",
  "id": "1234567890",
  "internal": true,
  "name": "default",
  "privateIpGoogleAccess": false,
  "public": false,
  "purpose": "PRIVATE",
  "webLink": "https://console.cloud.google.com/networking/subnetworks/details/europe-west4/default?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createComputeSubnetEntity should have flowLogsEnabled set to true if it is enabled for subnet 1`] = `
{
  "CIDR": "10.164.0.0/20",
  "_class": [
    "Network",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4/subnetworks/default",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2020-08-07T10:20:16.033-07:00",
        "fingerprint": "whfZBEBCda4=",
        "gatewayAddress": "10.164.0.1",
        "id": "1234567890",
        "ipCidrRange": "10.164.0.0/20",
        "kind": "compute#subnetwork",
        "logConfig": {
          "enable": true,
        },
        "name": "default",
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/default",
        "privateIpGoogleAccess": false,
        "privateIpv6GoogleAccess": "DISABLE_GOOGLE_ACCESS",
        "purpose": "PRIVATE",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/europe-west4/subnetworks/default",
      },
    },
  ],
  "_type": "google_compute_subnetwork",
  "createdOn": 1596820816033,
  "description": undefined,
  "displayName": "default",
  "flowLogsEnabled": true,
  "gatewayAddress": "10.164.0.1",
  "id": "1234567890",
  "internal": true,
  "name": "default",
  "privateIpGoogleAccess": false,
  "public": false,
  "purpose": "PRIVATE",
  "webLink": "https://console.cloud.google.com/networking/subnetworks/details/europe-west4/default?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createFirewallRuleMappedRelationship should convert to mapped relationship 1`] = `
{
  "_class": "ALLOWS",
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/firewalls/public-compute-app-fw-allow-https:0:tcp:0:0.0.0.0/0:443",
  "_mapping": {
    "relationshipDirection": "REVERSE",
    "skipTargetCreation": true,
    "sourceEntityKey": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/firewalls/public-compute-app-fw-allow-https",
    "targetEntity": {
      "CIDR": "0.0.0.0/0",
      "CIDRv6": "::/0",
      "_class": [
        "Internet",
        "Network",
      ],
      "_key": "global:internet",
      "_type": "internet",
      "displayName": "Internet",
      "public": true,
    },
    "targetFilterKeys": [
      [
        "_key",
      ],
    ],
  },
  "_type": "google_cloud_firewall_rule",
  "displayName": "ALLOWS",
  "fromPort": 443,
  "ipProtocol": "tcp",
  "ipRange": "0.0.0.0/0",
  "portRange": "443",
  "protocol": "tcp",
  "toPort": 443,
}
`;

exports[`#createForwardingRuleEntity should convert to entity 1`] = `
{
  "_class": [
    "Configuration",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/forwardingRules/forwarding-rule-example",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "IPAddress": "35.226.248.183",
        "IPProtocol": "TCP",
        "backendService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/forwarding-rule-example-backend",
        "creationTimestamp": "2021-07-06T09:09:23.865-07:00",
        "description": "",
        "fingerprint": "a9razc1zgQg=",
        "id": "8553404519655489244",
        "kind": "compute#forwardingRule",
        "labelFingerprint": "42WmSpB8rSM=",
        "loadBalancingScheme": "EXTERNAL",
        "name": "forwarding-rule-example",
        "networkTier": "PREMIUM",
        "portRange": "80-80",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/forwardingRules/forwarding-rule-example",
      },
    },
  ],
  "_type": "google_compute_forwarding_rule",
  "allPorts": undefined,
  "allowGlobalAccess": undefined,
  "backendService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/forwarding-rule-example-backend",
  "createdOn": 1625587763865,
  "description": "",
  "displayName": "forwarding-rule-example",
  "id": "8553404519655489244",
  "ipAddress": "35.226.248.183",
  "ipProtocol": "TCP",
  "isMirroringCollector": undefined,
  "kind": "compute#forwardingRule",
  "loadBalancingScheme": "EXTERNAL",
  "name": "forwarding-rule-example",
  "network": undefined,
  "networkTier": "PREMIUM",
  "portRange": "80-80",
  "ports": undefined,
  "pscConnectionId": undefined,
  "serviceName": undefined,
  "subnetwork": undefined,
}
`;

exports[`#createGlobalForwardingRuleEntity should convert to entity 1`] = `
{
  "_class": [
    "Configuration",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/forwardingRules/global-forwarding-rule-example",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "IPAddress": "34.149.86.61",
        "IPProtocol": "TCP",
        "creationTimestamp": "2021-07-06T12:13:10.197-07:00",
        "description": "",
        "fingerprint": "TcR6S3PkYpw=",
        "id": "1882786573381604777",
        "kind": "compute#forwardingRule",
        "labelFingerprint": "42WmSpB8rSM=",
        "loadBalancingScheme": "EXTERNAL",
        "name": "global-forwarding-rule-example",
        "networkTier": "PREMIUM",
        "portRange": "80-80",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/forwardingRules/global-forwarding-rule-example",
        "target": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/targetHttpProxies/global-forwarding-rule-example-http-proxy",
      },
    },
  ],
  "_type": "google_compute_global_forwarding_rule",
  "allPorts": undefined,
  "allowGlobalAccess": undefined,
  "backendService": undefined,
  "createdOn": 1625598790197,
  "description": "",
  "displayName": "global-forwarding-rule-example",
  "id": "1882786573381604777",
  "ipAddress": "34.149.86.61",
  "ipProtocol": "TCP",
  "isMirroringCollector": undefined,
  "kind": "compute#forwardingRule",
  "loadBalancingScheme": "EXTERNAL",
  "name": "global-forwarding-rule-example",
  "network": undefined,
  "networkTier": "PREMIUM",
  "portRange": "80-80",
  "ports": undefined,
  "pscConnectionId": undefined,
  "serviceName": undefined,
  "subnetwork": undefined,
}
`;

exports[`#createHealthCheckEntity should convert to entity 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/healthChecks/health-check",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "checkIntervalSec": 10,
        "creationTimestamp": "2021-01-25T13:09:23.908-08:00",
        "description": "",
        "healthyThreshold": 2,
        "id": "1905105216322309484",
        "kind": "compute#healthCheck",
        "name": "health-check",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/healthChecks/health-check",
        "tcpHealthCheck": {
          "port": 80,
          "proxyHeader": "NONE",
        },
        "timeoutSec": 5,
        "type": "TCP",
        "unhealthyThreshold": 3,
      },
    },
  ],
  "_type": "google_compute_health_check",
  "category": [
    "network",
  ],
  "checkIntervalSec": 10,
  "createdOn": 1611608963908,
  "description": "",
  "displayName": "health-check",
  "function": [
    "validation",
  ],
  "healthyThreshold": 2,
  "id": "1905105216322309484",
  "name": "health-check",
  "regional": false,
  "timeoutSec": 5,
  "type": "TCP",
  "unhealthyThreshold": 3,
  "webLink": "https://console.cloud.google.com/compute/healthChecks/details/health-check?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createInstanceGroupEntity should convert to entity 1`] = `
{
  "_class": [
    "Group",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instanceGroups/instance-group-1",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-01-25T13:05:35.348-08:00",
        "description": "This instance group is controlled by Instance Group Manager 'instance-group-1'. To modify instances in this group, use the Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/instanceGroupManagers",
        "fingerprint": "Mhi8gtwR57U=",
        "id": "4682404015364017264",
        "kind": "compute#instanceGroup",
        "name": "instance-group-1",
        "namedPorts": [
          {
            "name": "https",
            "port": 5000,
          },
        ],
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/default",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a/instanceGroups/instance-group-1",
        "size": 1,
        "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/subnetworks/default",
        "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a",
      },
    },
  ],
  "_type": "google_compute_instance_group",
  "createdOn": 1611608735348,
  "description": "This instance group is controlled by Instance Group Manager 'instance-group-1'. To modify instances in this group, use the Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/instanceGroupManagers",
  "displayName": "instance-group-1",
  "id": "4682404015364017264",
  "name": "instance-group-1",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/networks/default",
  "regional": false,
  "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/regions/us-central1/subnetworks/default",
  "webLink": "https://console.cloud.google.com/compute/instanceGroups/details/us-central1-a/instance-group-1?project=j1-gc-integration-dev-v2",
  "zone": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/zones/us-central1-a",
}
`;

exports[`#createLoadBalancerEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/urlMaps/region-load-balancer",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-07-06T08:43:38.575-07:00",
        "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-backend-service-a",
        "fingerprint": "pQIO2oOQZtQ=",
        "hostRules": [
          {
            "hosts": [
              "mysite.com",
            ],
            "pathMatcher": "allpaths",
          },
        ],
        "id": "1752343790922351813",
        "kind": "compute#urlMap",
        "name": "region-load-balancer",
        "pathMatchers": [
          {
            "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-backend-service-a",
            "name": "allpaths",
            "pathRules": [
              {
                "paths": [
                  "/*",
                ],
                "service": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-backend-service-a",
              },
            ],
          },
        ],
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/urlMaps/region-load-balancer",
      },
    },
  ],
  "_type": "google_compute_url_map",
  "category": [
    "network",
  ],
  "createdOn": 1625586218575,
  "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-backend-service-a",
  "description": undefined,
  "displayName": "region-load-balancer",
  "function": [
    "load-balancing",
  ],
  "id": "1752343790922351813",
  "kind": "compute#urlMap",
  "name": "region-load-balancer",
  "public": true,
  "regional": false,
}
`;

exports[`#createRegionBackendServiceEntity should convert to entity 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-service",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "affinityCookieTtlSec": 0,
        "backends": [
          {
            "balancingMode": "UTILIZATION",
            "capacityScaler": 1,
            "group": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/instanceGroups/rbs-rigm",
          },
        ],
        "connectionDraining": {
          "drainingTimeoutSec": 0,
        },
        "creationTimestamp": "2021-07-02T11:37:53.945-07:00",
        "description": "",
        "fingerprint": "awc17aRlLnY=",
        "healthChecks": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/healthChecks/region-health-check",
        ],
        "id": "4177301228397716462",
        "kind": "compute#backendService",
        "loadBalancingScheme": "INTERNAL_MANAGED",
        "name": "region-service",
        "port": 80,
        "portName": "http",
        "protocol": "HTTP",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/backendServices/region-service",
        "sessionAffinity": "NONE",
        "timeoutSec": 10,
      },
    },
  ],
  "_type": "google_compute_backend_service",
  "category": [
    "network",
  ],
  "createdOn": 1625251073945,
  "description": "",
  "displayName": "region-service",
  "enableCDN": undefined,
  "function": [
    "load-balancing",
  ],
  "id": "4177301228397716462",
  "name": "region-service",
  "port": 80,
  "protocol": "HTTP",
  "regional": true,
  "timeoutSec": 10,
}
`;

exports[`#createRegionHealthCheckEntity should convert to entity 1`] = `
{
  "_class": [
    "Service",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/healthChecks/forwarding-rule-example-hc",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "checkIntervalSec": 10,
        "creationTimestamp": "2021-07-07T13:09:23.908-08:00",
        "description": "",
        "healthyThreshold": 2,
        "id": "1905105216322309484",
        "kind": "compute#healthCheck",
        "name": "region-health-check",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/healthChecks/forwarding-rule-example-hc",
        "tcpHealthCheck": {
          "port": 80,
          "proxyHeader": "NONE",
        },
        "timeoutSec": 5,
        "type": "TCP",
        "unhealthyThreshold": 3,
      },
    },
  ],
  "_type": "google_compute_health_check",
  "category": [
    "network",
  ],
  "checkIntervalSec": 10,
  "createdOn": 1625692163908,
  "description": "",
  "displayName": "region-health-check",
  "function": [
    "validation",
  ],
  "healthyThreshold": 2,
  "id": "1905105216322309484",
  "name": "region-health-check",
  "region": "us-central1",
  "regional": true,
  "timeoutSec": 5,
  "type": "TCP",
  "unhealthyThreshold": 3,
  "webLink": "https://console.cloud.google.com/compute/healthChecks/details/regions/us-central1/region-health-check?project=j1-gc-integration-dev-v2",
}
`;

exports[`#createRegionInstanceGroupEntity should convert to entity 1`] = `
{
  "_class": [
    "Group",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/instanceGroups/rbs-rigm",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-07-02T11:37:36.900-07:00",
        "description": "This instance group is controlled by Regional Instance Group Manager 'rbs-rigm'. To modify instances in this group, use the Regional Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/regionInstanceGroupManagers",
        "fingerprint": "l9ccw0jwP90=",
        "id": "1067593809144242719",
        "kind": "compute#instanceGroup",
        "name": "rbs-rigm",
        "namedPorts": [
          {
            "name": "http",
            "port": 80,
          },
        ],
        "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/rbs-net",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/instanceGroups/rbs-rigm",
        "size": 1,
        "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/rbs-net-default",
      },
    },
  ],
  "_type": "google_compute_instance_group",
  "createdOn": 1625251056900,
  "description": "This instance group is controlled by Regional Instance Group Manager 'rbs-rigm'. To modify instances in this group, use the Regional Instance Group Manager API: https://cloud.google.com/compute/docs/reference/latest/regionInstanceGroupManagers",
  "displayName": "rbs-rigm",
  "id": "1067593809144242719",
  "name": "rbs-rigm",
  "network": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/global/networks/rbs-net",
  "regional": true,
  "subnetwork": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/subnetworks/rbs-net-default",
  "webLink": "https://console.cloud.google.com/compute/instanceGroups/details/us-central1/rbs-rigm?project=j1-gc-integration-dev-v2",
  "zone": undefined,
}
`;

exports[`#createRegionLoadBalancerEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/urlMaps/example-http-load-balancer",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-01-25T13:09:32.355-08:00",
        "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-backend-service",
        "fingerprint": "7VTPVZHiF8k=",
        "hostRules": [
          {
            "hosts": [
              "web.test.com",
            ],
            "pathMatcher": "path-matcher-1",
          },
        ],
        "id": "7884251075960802659",
        "kind": "compute#urlMap",
        "name": "example-http-load-balancer",
        "pathMatchers": [
          {
            "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-backend-service",
            "name": "path-matcher-1",
            "pathRules": [
              {
                "paths": [
                  "/images/*",
                ],
                "service": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendBuckets/example-backend-bucket",
              },
            ],
          },
        ],
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/urlMaps/example-http-load-balancer",
      },
    },
  ],
  "_type": "google_compute_url_map",
  "category": [
    "network",
  ],
  "createdOn": 1611608972355,
  "defaultService": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-backend-service",
  "description": undefined,
  "displayName": "example-http-load-balancer",
  "function": [
    "load-balancing",
  ],
  "id": "7884251075960802659",
  "kind": "compute#urlMap",
  "name": "example-http-load-balancer",
  "public": true,
  "region": undefined,
  "regional": true,
}
`;

exports[`#createRegionTargetHttpProxyEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/targetHttpProxies/region-target-http-proxy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-07-06T08:43:50.058-07:00",
        "fingerprint": "NsugSa3Ddx8=",
        "id": "8864379689692153049",
        "kind": "compute#targetHttpProxy",
        "name": "region-target-http-proxy",
        "region": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/targetHttpProxies/region-target-http-proxy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v3/regions/us-central1/urlMaps/region-load-balancer",
      },
    },
  ],
  "_type": "google_compute_target_http_proxy",
  "category": [
    "network",
  ],
  "createdOn": 1625586230058,
  "displayName": "region-target-http-proxy",
  "function": [
    "load-balancing",
  ],
  "id": "8864379689692153049",
  "name": "region-target-http-proxy",
  "public": true,
  "regional": true,
}
`;

exports[`#createRegionTargetHttpsProxyEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-01-25T13:12:07.139-08:00",
        "id": "4900822412538579656",
        "kind": "compute#targetHttpsProxy",
        "name": "example-http-load-balancer-target-proxy",
        "quicOverride": "NONE",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
        "sslCertificates": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslCertificates/example-certificate",
        ],
        "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/urlMaps/example-http-load-balancer",
      },
    },
  ],
  "_type": "google_compute_target_https_proxy",
  "category": [
    "network",
  ],
  "createdOn": 1611609127139,
  "displayName": "example-http-load-balancer-target-proxy",
  "function": [
    "load-balancing",
  ],
  "id": "4900822412538579656",
  "name": "example-http-load-balancer-target-proxy",
  "public": true,
  "regional": false,
  "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
}
`;

exports[`#createSslPolicyEntity should convert to entity 1`] = `
{
  "_class": [
    "Policy",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-01-25T13:14:45.749-08:00",
        "customFeatures": [
          "TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA",
          "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
          "TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA",
          "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
        ],
        "fingerprint": "5krWknNXjWo=",
        "id": "1226213084601944618",
        "kind": "compute#sslPolicy",
        "minTlsVersion": "TLS_1_2",
        "name": "example-tls-1-2-policy",
        "profile": "CUSTOM",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
      },
    },
  ],
  "_type": "google_compute_ssl_policy",
  "content": "",
  "createdOn": 1611609285749,
  "customFeatures": [
    "TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA",
    "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
    "TLS_ECDHE_ECDSA_WITH_AES_256_CBC_SHA",
    "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
  ],
  "displayName": "example-tls-1-2-policy",
  "id": "1226213084601944618",
  "minTlsVersion": "TLS_1_2",
  "name": "example-tls-1-2-policy",
  "profile": "CUSTOM",
  "summary": "SSL policies give you the ability to control the features of SSL that your Google Cloud SSL proxy load balancer or external HTTP(S) load balancer negotiates with clients.",
  "title": "SSL Policy",
}
`;

exports[`#createTargetHttpProxyEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpProxies/example-http-loadbalancer-target-proxy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-02-04T11:44:02.365-08:00",
        "fingerprint": "XrJcBMxyGME=",
        "id": "3284730591055048813",
        "kind": "compute#targetHttpProxy",
        "name": "example-http-loadbalancer-target-proxy",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpProxies/example-http-loadbalancer-target-proxy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/urlMaps/example-http-loadbalancer",
      },
    },
  ],
  "_type": "google_compute_target_http_proxy",
  "category": [
    "network",
  ],
  "createdOn": 1612467842365,
  "displayName": "example-http-loadbalancer-target-proxy",
  "function": [
    "load-balancing",
  ],
  "id": "3284730591055048813",
  "name": "example-http-loadbalancer-target-proxy",
  "public": true,
  "regional": false,
}
`;

exports[`#createTargetHttpsProxyEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-01-25T13:12:07.139-08:00",
        "id": "4900822412538579656",
        "kind": "compute#targetHttpsProxy",
        "name": "example-http-load-balancer-target-proxy",
        "quicOverride": "NONE",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetHttpsProxies/example-http-load-balancer-target-proxy",
        "sslCertificates": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslCertificates/example-certificate",
        ],
        "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
        "urlMap": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/urlMaps/example-http-load-balancer",
      },
    },
  ],
  "_type": "google_compute_target_https_proxy",
  "category": [
    "network",
  ],
  "createdOn": 1611609127139,
  "displayName": "example-http-load-balancer-target-proxy",
  "function": [
    "load-balancing",
  ],
  "id": "4900822412538579656",
  "name": "example-http-load-balancer-target-proxy",
  "public": true,
  "regional": false,
  "sslPolicy": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslPolicies/example-tls-1-2-policy",
}
`;

exports[`#createTargetSslProxyEntity should convert to entity 1`] = `
{
  "_class": [
    "Gateway",
  ],
  "_key": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetSslProxies/example-ssl-2-loadbalancer-target-proxy",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "creationTimestamp": "2021-02-04T12:07:33.886-08:00",
        "id": "764465862189116138",
        "kind": "compute#targetSslProxy",
        "name": "example-ssl-2-loadbalancer-target-proxy",
        "proxyHeader": "NONE",
        "selfLink": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/targetSslProxies/example-ssl-2-loadbalancer-target-proxy",
        "service": "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/backendServices/example-ssl-2-loadbalancer",
        "sslCertificates": [
          "https://www.googleapis.com/compute/v1/projects/j1-gc-integration-dev-v2/global/sslCertificates/example-certificate",
        ],
      },
    },
  ],
  "_type": "google_compute_target_ssl_proxy",
  "category": [
    "network",
  ],
  "createdOn": 1612469253886,
  "displayName": "example-ssl-2-loadbalancer-target-proxy",
  "function": [
    "load-balancing",
  ],
  "id": "764465862189116138",
  "name": "example-ssl-2-loadbalancer-target-proxy",
  "public": true,
  "sslPolicy": undefined,
}
`;
